# pypresseportal

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  setup.cfg  setup.py
.github/workflows/: python-package.yml
assets/: assets.json
docs/: conf.py  getting_started.rst  index.rst  installing.rst  modules.rst  pypresseportal.rst  spelling_wordlist.txt  usage_examples.rst
docs/_ext/: ogtag.py
pypresseportal/: __init__.py  constants.py  pypresseportal.py  pypresseportal_constants.py  pypresseportal_errors.py
requirements/: dev_requirements.txt  docs_requirements.txt  test_requirements.txt
tests/: api_responses.py  test_pypresseportal.py
tests/replies/: authentification_failed_error.json  company_info.json  entity_search.json  get_public_service_news.json  get_stories.json  office_info.json
