[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

# Setup pydocstyle
[pydocstyle]
match = (?!test_).*\.py
match-dir=[^\.].*
# Follow google convention
# http://www.pydocstyle.org/en/5.0.2/error_codes.html
ignore=D107, D203, D204, D213, D215, D400, D401, D404, D406, D407, D408, D409, D413
